共通ヘッダーの導入

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+    <script src="js/lib/supabase.js"></script>
+    <script src="js/lib/dataviz-auth-client.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
